fixing overlap of popup boxes CSS

--- a/client/src/components/deleteAppointments/deleteAppointments.css
+++ b/client/src/components/deleteAppointments/deleteAppointments.css
@@ -85,7 +85,7 @@
     outline: none;
 }
 
-.popup-content {
+.popup2-content {
     width: 40vw !important;
     min-height: 0% !important;
     background-color: #C3B7B1 !important;
